<resources>
    <string name="app_name">Azima</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome to Azima</string>
    <string name="slide_1_desc">Easy access to loans, anytime, anywhere</string>
    <string name="slide_2_title">Application is quick </string>
    <string name="slide_2_desc">Straight in to your mobile money account</string>
    <string name="slide_3_title">Easy Payments</string>
    <string name="slide_3_desc">Payback in easy installments over 4 weeks</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="full_names">Full Names (as they appear on ID)</string>
    <string name="identification_number">Identification Number</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="thanks_for_installing_let_s_get_you_set_up">Thanks for installing - let\'s get you set up!</string>
    <string name="welcome_to_azima">Welcome to Azima</string>
    <string name="_2547xxxxxxxx">+2547XXXXXXXX</string>
    <string name="permissions_not_granted_read_phone_state">Permisson not granted</string>
    <string name="permission_available_read_phone_state">Permission granted</string>

</resources>
